// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateAndUpload component action buttons should show and be enabled if file creation is possible 1`] = `
<div class="create-and-upload-actions oc-flex-inline oc-mr-s">
  <span>
    <button aria-label="New folder" class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-primary oc-button-primary-filled" id="new-folder-btn" type="button">
      <!--v-if-->
      <!-- @slot Content of the button -->
      <oc-icon-stub accessiblelabel="" color="" filltype="fill" name="resource-type-folder" size="medium" type="span" variation="passive"></oc-icon-stub>
      <span>New Folder</span>
    </button>
  </span>
  <span>
    <button aria-label="Upload files or folders" class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-outline" id="upload-menu-btn" type="button">
      <!--v-if-->
      <!-- @slot Content of the button -->
      <oc-icon-stub accessiblelabel="" color="" filltype="line" name="upload" size="medium" type="span" variation="passive"></oc-icon-stub>
      <span>Upload</span>
    </button>
  </span>
  <oc-drop-stub class="oc-width-auto" closeonclick="true" dropid="upload-menu-drop" isnested="false" mode="click" paddingsize="small" position="bottom-start" toggle="#upload-menu-btn">
    <oc-list-stub class="" id="upload-list" raw="false">
      <li class="oc-menu-item-hover">
        <resource-upload-stub btnclass="oc-width-1-1" btnlabel="" isfolder="false"></resource-upload-stub>
      </li>
      <li class="oc-menu-item-hover">
        <resource-upload-stub btnclass="oc-width-1-1" btnlabel="" isfolder="true"></resource-upload-stub>
      </li>
    </oc-list-stub>
    <!--v-if-->
  </oc-drop-stub>
  <!--v-if-->
</div>
`;

exports[`CreateAndUpload component file handlers should show additional handlers 1`] = `
<div class="create-and-upload-actions oc-flex-inline oc-mr-s">
  <span>
    <button aria-label="Create new files or folders" class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-primary oc-button-primary-filled" id="new-file-menu-btn" type="button">
      <!--v-if-->
      <!-- @slot Content of the button -->
      <oc-icon-stub accessiblelabel="" color="" filltype="fill" name="add" size="medium" type="span" variation="passive"></oc-icon-stub>
      <span>New</span>
    </button>
  </span>
  <oc-drop-stub class="oc-width-auto" closeonclick="true" dropid="new-file-menu-drop" isnested="false" mode="click" paddingsize="small" position="bottom-start" toggle="#new-file-menu-btn">
    <oc-list-stub class="" id="create-list" raw="false">
      <li class="create-list-folder oc-menu-item-hover">
        <button class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw" id="new-folder-btn" type="button">
          <!--v-if-->
          <!-- @slot Content of the button -->
          <oc-resource-icon-stub resource="[object Object]" size="medium"></oc-resource-icon-stub>
          <span>Folder</span>
        </button>
      </li>
      <li class="create-list-file oc-menu-item-hover">
        <button class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw" type="button">
          <!--v-if-->
          <!-- @slot Content of the button -->
          <oc-resource-icon-stub resource="[object Object]" size="medium"></oc-resource-icon-stub>
          <span class="create-list-file-item-text">Plain text file</span>
          <!--v-if-->
        </button>
      </li>
      <li class="create-list-file oc-menu-item-hover">
        <button class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw" type="button">
          <!--v-if-->
          <!-- @slot Content of the button -->
          <oc-resource-icon-stub resource="[object Object]" size="medium"></oc-resource-icon-stub>
          <span class="create-list-file-item-text">Mark-down file</span>
          <!--v-if-->
        </button>
      </li>
      <li class="create-list-file oc-menu-item-hover">
        <button class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw" type="button">
          <!--v-if-->
          <!-- @slot Content of the button -->
          <oc-resource-icon-stub resource="[object Object]" size="medium"></oc-resource-icon-stub>
          <span class="create-list-file-item-text">Draw.io document</span>
          <!--v-if-->
        </button>
      </li>
      <li class="bottom-seperator"></li>
      <li class="create-list-file oc-menu-item-hover">
        <button class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw new-file-btn-txt" type="button">
          <!--v-if-->
          <!-- @slot Content of the button -->
          <oc-resource-icon-stub resource="[object Object]" size="medium"></oc-resource-icon-stub>
          <span class="create-list-file-item-text">Plain text file</span>
          <!--v-if-->
        </button>
      </li>
      <li class="create-list-file oc-menu-item-hover">
        <button class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw new-file-btn-md" type="button">
          <!--v-if-->
          <!-- @slot Content of the button -->
          <oc-resource-icon-stub resource="[object Object]" size="medium"></oc-resource-icon-stub>
          <span class="create-list-file-item-text">Mark-down file</span>
          <!--v-if-->
        </button>
      </li>
      <li class="create-list-file oc-menu-item-hover">
        <button class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw new-file-btn-drawio" type="button">
          <!--v-if-->
          <!-- @slot Content of the button -->
          <oc-resource-icon-stub resource="[object Object]" size="medium"></oc-resource-icon-stub>
          <span class="create-list-file-item-text">Draw.io document</span>
          <!--v-if-->
        </button>
      </li>
      <li class="create-list-shortcut oc-menu-item-hover">
        <button class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw" id="new-shortcut-btn" type="button">
          <!--v-if-->
          <!-- @slot Content of the button -->
          <oc-icon-stub accessiblelabel="" color="" filltype="fill" name="external-link" size="medium" type="span" variation="passive"></oc-icon-stub>
          <span>Shortcut</span>
          <!--v-if-->
        </button>
      </li>
    </oc-list-stub>
  </oc-drop-stub>
  <span>
    <button aria-label="Upload files or folders" class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-outline" id="upload-menu-btn" type="button">
      <!--v-if-->
      <!-- @slot Content of the button -->
      <oc-icon-stub accessiblelabel="" color="" filltype="line" name="upload" size="medium" type="span" variation="passive"></oc-icon-stub>
      <span>Upload</span>
    </button>
  </span>
  <oc-drop-stub class="oc-width-auto" closeonclick="true" dropid="upload-menu-drop" isnested="false" mode="click" paddingsize="small" position="bottom-start" toggle="#upload-menu-btn">
    <oc-list-stub class="" id="upload-list" raw="false">
      <li class="oc-menu-item-hover">
        <resource-upload-stub btnclass="oc-width-1-1" btnlabel="" isfolder="false"></resource-upload-stub>
      </li>
      <li class="oc-menu-item-hover">
        <resource-upload-stub btnclass="oc-width-1-1" btnlabel="" isfolder="true"></resource-upload-stub>
      </li>
    </oc-list-stub>
    <!--v-if-->
  </oc-drop-stub>
  <!--v-if-->
</div>
`;

exports[`CreateAndUpload component file handlers should show file extension if file extensions are enabled 1`] = `
<div class="create-and-upload-actions oc-flex-inline oc-mr-s">
  <span>
    <button aria-label="Create new files or folders" class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-primary oc-button-primary-filled" id="new-file-menu-btn" type="button">
      <!--v-if-->
      <!-- @slot Content of the button -->
      <oc-icon-stub accessiblelabel="" color="" filltype="fill" name="add" size="medium" type="span" variation="passive"></oc-icon-stub>
      <span>New</span>
    </button>
  </span>
  <oc-drop-stub class="oc-width-auto" closeonclick="true" dropid="new-file-menu-drop" isnested="false" mode="click" paddingsize="small" position="bottom-start" toggle="#new-file-menu-btn">
    <oc-list-stub class="expanded-list" id="create-list" raw="false">
      <li class="create-list-folder oc-menu-item-hover">
        <button class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw" id="new-folder-btn" type="button">
          <!--v-if-->
          <!-- @slot Content of the button -->
          <oc-resource-icon-stub resource="[object Object]" size="medium"></oc-resource-icon-stub>
          <span>Folder</span>
        </button>
      </li>
      <li class="create-list-file oc-menu-item-hover">
        <button class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw" type="button">
          <!--v-if-->
          <!-- @slot Content of the button -->
          <oc-resource-icon-stub resource="[object Object]" size="medium"></oc-resource-icon-stub>
          <span class="create-list-file-item-text">Plain text file</span>
          <span class="create-list-file-item-extension">txt</span>
        </button>
      </li>
      <li class="create-list-file oc-menu-item-hover">
        <button class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw" type="button">
          <!--v-if-->
          <!-- @slot Content of the button -->
          <oc-resource-icon-stub resource="[object Object]" size="medium"></oc-resource-icon-stub>
          <span class="create-list-file-item-text">Mark-down file</span>
          <span class="create-list-file-item-extension">md</span>
        </button>
      </li>
      <li class="create-list-file oc-menu-item-hover">
        <button class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw" type="button">
          <!--v-if-->
          <!-- @slot Content of the button -->
          <oc-resource-icon-stub resource="[object Object]" size="medium"></oc-resource-icon-stub>
          <span class="create-list-file-item-text">Draw.io document</span>
          <span class="create-list-file-item-extension">drawio</span>
        </button>
      </li>
      <li class="bottom-seperator"></li>
      <li class="create-list-file oc-menu-item-hover">
        <button class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw new-file-btn-txt" type="button">
          <!--v-if-->
          <!-- @slot Content of the button -->
          <oc-resource-icon-stub resource="[object Object]" size="medium"></oc-resource-icon-stub>
          <span class="create-list-file-item-text">Plain text file</span>
          <span class="create-list-file-item-extension">txt</span>
        </button>
      </li>
      <li class="create-list-file oc-menu-item-hover">
        <button class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw new-file-btn-md" type="button">
          <!--v-if-->
          <!-- @slot Content of the button -->
          <oc-resource-icon-stub resource="[object Object]" size="medium"></oc-resource-icon-stub>
          <span class="create-list-file-item-text">Mark-down file</span>
          <span class="create-list-file-item-extension">md</span>
        </button>
      </li>
      <li class="create-list-file oc-menu-item-hover">
        <button class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw new-file-btn-drawio" type="button">
          <!--v-if-->
          <!-- @slot Content of the button -->
          <oc-resource-icon-stub resource="[object Object]" size="medium"></oc-resource-icon-stub>
          <span class="create-list-file-item-text">Draw.io document</span>
          <span class="create-list-file-item-extension">drawio</span>
        </button>
      </li>
      <li class="create-list-shortcut oc-menu-item-hover">
        <button class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw" id="new-shortcut-btn" type="button">
          <!--v-if-->
          <!-- @slot Content of the button -->
          <oc-icon-stub accessiblelabel="" color="" filltype="fill" name="external-link" size="medium" type="span" variation="passive"></oc-icon-stub>
          <span>Shortcut</span>
          <span class="create-list-file-item-extension">url</span>
        </button>
      </li>
    </oc-list-stub>
  </oc-drop-stub>
  <span>
    <button aria-label="Upload files or folders" class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-outline" id="upload-menu-btn" type="button">
      <!--v-if-->
      <!-- @slot Content of the button -->
      <oc-icon-stub accessiblelabel="" color="" filltype="line" name="upload" size="medium" type="span" variation="passive"></oc-icon-stub>
      <span>Upload</span>
    </button>
  </span>
  <oc-drop-stub class="oc-width-auto" closeonclick="true" dropid="upload-menu-drop" isnested="false" mode="click" paddingsize="small" position="bottom-start" toggle="#upload-menu-btn">
    <oc-list-stub class="" id="upload-list" raw="false">
      <li class="oc-menu-item-hover">
        <resource-upload-stub btnclass="oc-width-1-1" btnlabel="" isfolder="false"></resource-upload-stub>
      </li>
      <li class="oc-menu-item-hover">
        <resource-upload-stub btnclass="oc-width-1-1" btnlabel="" isfolder="true"></resource-upload-stub>
      </li>
    </oc-list-stub>
    <!--v-if-->
  </oc-drop-stub>
  <!--v-if-->
</div>
`;
